--- a/styles/arcitect.css
+++ b/styles/arcitect.css
@@ -34,6 +34,18 @@
   margin: 0 auto
   ;
 }
+.Awards{background-color: #E7E7E7;
+border: solid tomato;
+border-radius: 5px;
+justify-content: center;
+align-items: center;
+
+}
+.icon-img{
+  align-items: center;
+}
+
+
 
 /* header styles */
 
@@ -126,4 +138,37 @@
   display: grid;
   grid-template-rows: repeat(1,1fr);
   padding: 10px;
+}
+.summery{
+  font-weight: bold;
+  font-size: 20px;
+}
+.design-title{
+  font-weight: 800;
+  font-size: 3rem;
+}
+.btn-class{
+  font-weight: bold;
+  font-size: 64px;
+}
+.main-fact{
+  margin: 20px 130px;
+}
+.fact{
+  font-weight: bold;
+  font-size: 45px;
+}
+.fact-pera{
+font-size: 16px;
+}
+.icons{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 30px;
+  margin: 50px 130px;
+  
+}
+.users{
+  font-weight: bold;
+  font-size: 45px;
 }
