--- a/styles/arcitect.css
+++ b/styles/arcitect.css
@@ -172,3 +172,18 @@ font-size: 16px;
   font-weight: bold;
   font-size: 45px;
 }
+.sponspores{
+  margin: 50px 130px;
+  text-align: center;
+}
+.logo{
+  justify-content: space-around;
+  margin: 50px 130px;
+}
+.footer{
+  text-align: center;
+  margin: 0 auto;
+  background-color: #FFF4E7;
+  max-width: 1440px;
+
+}
