added a footer description

--- a/styles/arcitect.css
+++ b/styles/arcitect.css
@@ -29,12 +29,16 @@
   border-radius: 8px;
   border-style: none;
 }
+#btn-year{
+  margin-left: -100px;
+  margin-top: -100px;
+}
 .main{
   width: 1440px;
   margin: 0 auto
   ;
 }
-.Awards{background-color: #E7E7E7;
+.Awards{
 border: solid tomato;
 border-radius: 5px;
 justify-content: center;
@@ -44,7 +48,17 @@ align-items: center;
 .icon-img{
   align-items: center;
 }
-
+.number{
+  font-weight: 500;
+  font-size: 2rem;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.icon-pera{
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
 
 
 /* header styles */
@@ -97,6 +111,7 @@ align-items: center;
 /* features styles */
 .team-features{
   margin: 130px;
+  column-gap: 30px;
 }
 .features-discription{
   justify-items: center;
@@ -137,7 +152,9 @@ align-items: center;
 .features-design{
   display: grid;
   grid-template-rows: repeat(1,1fr);
-  padding: 10px;
+  padding: 50px;
+  box-shadow: #FFF4E7;
+  
 }
 .summery{
   font-weight: bold;
@@ -151,6 +168,8 @@ align-items: center;
   font-weight: bold;
   font-size: 64px;
 }
+
+
 .main-fact{
   margin: 20px 130px;
 }
@@ -168,6 +187,12 @@ font-size: 16px;
   margin: 50px 130px;
   
 }
+.Awards {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
 .users{
   font-weight: bold;
   font-size: 45px;
@@ -179,11 +204,32 @@ font-size: 16px;
 .logo{
   justify-content: space-around;
   margin: 50px 130px;
+  filter: grayscale(100%);
+  ;
 }
 .footer{
-  text-align: center;
+  justify-content: center;
+  align-items: center;
+ text-align: center;
   margin: 0 auto;
   background-color: #FFF4E7;
-  max-width: 1440px;
+  max-width: 620px;
+  height: 50px;
+  
 
+}
+@media screen and (min-width:576px) and (max-width:992px) {
+  .icons{ 
+    grid-template-columns: repeat(2,1fr);
+  }
+  .features-summary{
+    flex-direction: column;
+  }
+  .logo{
+    flex-direction: column
+    gap: 10px;
+    
+  }
+
+  
 }
